--- a/style.css
+++ b/style.css
@@ -40,16 +40,16 @@ header {
 #logoAlura {
   width: 60px;
   left: -16px;
-  top: 4px;
+  top: 6px;
   position: absolute;
 }
 
 main {
   grid-area: main;
   margin-top: 1rem;
-  align-content: center;
   align-items: center;
-  align-self: center;
+    align-content: center;
+    align-self: center;
 }
 
 nav {
@@ -67,6 +67,10 @@ nav {
   grid-template-areas: 'message result';
   justify-self: center;
   justify-content: center;
+  align-items: center;
+    align-content: center;
+    align-self: center;
+    
 }
 
 #message {
@@ -168,7 +172,8 @@ nav {
 #result {
   grid-area: result;
   align-items: center;
-  align-items: center;
+    align-content: center;
+    align-self: center;
   width: 95%;
   height: 580px;
   /* border: solid 1px blue;  */
@@ -196,8 +201,7 @@ nav {
   box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
   border-radius: 22px;
   border: none;
-  justify-items: baseline;
-  align-items: baseline;
+
 }
 
 #tituloEn {
@@ -294,6 +298,8 @@ nav {
 
   #result {
     align-items: center;
+    align-content: center;
+    align-self: center;
     justify-content: center;
     width: 100%;
     height: 250px;
@@ -433,5 +439,11 @@ nav {
 
   #vacio {
     font-size: 0.8em;
+  }
+
+  #body {
+
+      margin: 0 auto;
+      width: 100%;
   }
 }
