--- a/style.css
+++ b/style.css
@@ -387,7 +387,11 @@ nav {
     height: 20px;
     margin: 0 auto 2em auto;
   }
+  #body {
 
+    margin: auto auto;
+    width: 100%;
+}
   nav {
     text-align: center;
     font-size: 1.5rem;
